--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 .bar a.active {
   float: left;
-  margin-left: 50px;
+  margin-left: 40px;
   font-weight: bolder;
   font-size: 17px;
 }
@@ -64,11 +64,18 @@
   justify-content: space-around;
   margin: 50px;
 }
+@media screen and (max-width: 900px) {
+  .market {
+    margin: auto;
+    display: inline;
+  }
+}
 .camera img {
   width: 100%;
   height: 65%;
 }
 .camera {
+  margin: 20px;
   padding: 2px;
   max-width: 400px;
   text-align: center;
@@ -83,6 +90,7 @@
   height: 65%;
 }
 .watch {
+  margin: 20px;
   padding: 2px;
   max-width: 400px;
   text-align: center;
@@ -96,6 +104,7 @@
   height: 65%;
 }
 .shirt {
+  margin: 20px;
   padding: 2px;
   max-width: 400px;
   text-align: center;
