--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 /*Navbar*/
 
 .bar {
@@ -10,13 +16,13 @@
   color: #b6a7a7;
   padding: 3px 16px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 17px;
 }
 .bar a.active {
   float: left;
   margin-left: 40px;
   font-weight: bolder;
-  font-size: 17px;
+  font-size: 25px;
 }
 .bgo {
   background-color: rgba(0, 0, 0, 0.7);
@@ -26,15 +32,15 @@
   text-align: center;
   margin: 15px;
   justify-content: center;
-  color: bisque;
+  color: rgb(255, 255, 255);
 }
 .bgo h3 {
   font-weight: bolder;
-  font-size: 35px;
+  font-size: 37px;
   margin-bottom: 2px;
 }
 .bgo p {
-  font-size: 10px;
+  font-size: 12px;
 
   font-weight: bolder;
 }
@@ -49,8 +55,6 @@
   width: 30%;
   margin: auto;
   padding: 15px;
-  background-position: center;
-  justify-content: center;
 
   border-radius: 4px;
   font-size: 15px;
@@ -69,6 +73,21 @@
     margin: auto;
     display: inline;
   }
+  .bar a {
+    justify-content: space-around;
+    margin-right: 10px;
+    float: right;
+    color: #b6a7a7;
+    padding: 3px 16px;
+    text-decoration: none;
+    font-size: 13px;
+  }
+  .bar a.active {
+    float: left;
+    margin-left: 40px;
+    font-weight: bolder;
+    font-size: 18px;
+  }
 }
 .camera img {
   width: 100%;
@@ -82,6 +101,7 @@
   border: 1px solid rgba(192, 184, 184, 0.5);
 }
 .camera h3 {
+  font-size: 25px;
   margin-bottom: -1px;
 }
 
@@ -97,6 +117,7 @@
   border: 1px solid rgba(192, 184, 184, 0.5);
 }
 .watch h3 {
+  font-size: 25px;
   margin-bottom: -1px;
 }
 .shirt img {
@@ -111,6 +132,7 @@
   border: 1px solid rgba(192, 184, 184, 0.5);
 }
 .shirt h3 {
+  font-size: 25px;
   margin-bottom: -1px;
 }
 
@@ -122,7 +144,7 @@
 .footer p {
   padding: -111px;
   color: #b6a7a7;
-  font-size: 10px;
+  font-size: 17px;
   font-weight: bold;
   text-align: center;
 }
