--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ body {
   }
   .bar a {
     justify-content: space-around;
-    margin: 1px;
-    margin-right: 7px;
+    margin-top: 2px;
+    margin-right: 5px;
     float: right;
     color: #b6a7a7;
     padding: 3px 16px;
@@ -146,6 +146,5 @@ body {
   padding: -111px;
   color: #b6a7a7;
   font-size: 17px;
-  font-weight: bold;
   text-align: center;
 }
