--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 .bar a.active {
   float: left;
   margin-left: 40px;
+  font-weight: bolder;
   font-size: 25px;
 }
 .bgo {
@@ -85,6 +86,7 @@ body {
   .bar a.active {
     float: left;
     margin-left: 2px;
+    font-weight: bolder;
     font-size: 18px;
   }
 }
